Added support for correct Siri data transfer (with Siri root on received push messages)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,6 @@
 # limitations under the Licence.
 #
 
-ukur.subscription.url=http://localhost:8080/subscription
+ukur.subscription.url=http://localhost:8080/external/subscription
 push.baseurl=http://localhost:${server.port}/push/
 server.port=8090
