--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,7 @@ jobs:
     - run:
         name: Docker build and push
         command: mvn docker:build docker:push -s /tools/m2/settings.xml
-    - run: *post-hook
+#    - run: *post-hook
 workflows:
   version: 2
   build_test_deploy:
