--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,89 +1,33 @@
-version: 2
+version: 2.1
 aliases:
-- &GCP-auth
-  name: GCP Authenticate
-  command: |
-    echo 'export GCLOUD_SERVICE_KEY="$GCLOUD_SERVICE_KEY"' >> $BASH_ENV
-    /tools/gcp_authenticate.sh
-- &docker-login
-  name: Docker login
-  command: |
-    echo 'export GCLOUD_SERVICE_KEY="$GCLOUD_SERVICE_KEY"' >> $BASH_ENV
-    /tools/docker_login.sh
-- &post-hook
-  name: Notify about build and docker image pushed
-  command: |
-    echo 'export CIRCLE_PROJECT_REPONAME="$CIRCLE_PROJECT_REPONAME"' >> $BASH_ENV
-    echo 'export CIRCLE_SHA1="$CIRCLE_SHA1"' >> $BASH_ENV
-    echo 'export BUILD_STATUS_API_KEY="$BUILD_STATUS_API_KEY"' >> $BASH_ENV
-    /tools/build_notify.sh
+  ### RUN COMMANDS
+  - &clean-build
+     "clean install"
+orbs:
+  maven: circleci/maven@0.0.8
 jobs:
   build:
-    docker:
-    - image: eu.gcr.io/carbon-1287/circleci-toolbox-image-java11
-      auth:
-        username: _json_key
-        password: $GCLOUD_SERVICE_KEY
-    environment:
-      MAVEN_OPTS: -Xmx3G
+    executor: java-11
     steps:
-    - checkout
-    - restore_cache:
-        key: dep-cache-{{ checksum "pom.xml" }}
-    - run: mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.0:go-offline -s /tools/m2/settings.xml
-    - save_cache:
-        paths:
-        - ~/.m2
-        key: dep-cache-{{ checksum "pom.xml" }}
-    # Cannot use -o because of snapshot dependencies.
-    - run: mvn install -s /tools/m2/settings.xml
-    - run:
-        name: Save test results
-        command: |
-          mkdir -p ~/junit/
-          find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/ \;
-        when: always
-    - store_test_results:
-        path: ~/junit
-    - store_artifacts:
-        path: ~/junit
-    - persist_to_workspace:
-        root: ~/project
-        paths:
-        - target
-        - pom.xml
-        - .circleci
-  deploy-docker:
-    docker:
-    - image: eu.gcr.io/carbon-1287/circleci-toolbox-image-java11
-      auth:
-        username: _json_key
-        password: $GCLOUD_SERVICE_KEY
-    environment:
-      DEBIAN_FRONTEND: "noninteractive"
-    steps:
-    - attach_workspace:
-        at: ~/project
-    - restore_cache:
-        key: dep-cache-{{ checksum "pom.xml" }}
-    - setup_remote_docker:
-        docker_layer_caching: true
-    - run: *GCP-auth
-    - run: *docker-login
-    - run:
-        name: Docker build and push
-        command: mvn docker:build docker:push -s /tools/m2/settings.xml
-    - run: *post-hook
+      - checkout-git
+      - maven/with_cache:
+          steps:
+            - run: *clean-build
+      - persist_to_workspace:
+          root:  ~/project
+          paths:
+            - target
+            - pom.xml
+            - .circleci
+
 workflows:
-  version: 2
-  build_test_deploy:
+  version: 2.1
+  release:
     jobs:
     - build:
-        context: org-carbon
-    - deploy-docker:
-        context: org-carbon
-        requires:
-        - build
+        name: build-release
+        context: global
         filters:
           branches:
-            only: master
+            only:
+              - /helm-charts/.*/
