Updated circleci configuration to use maven orbs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
   build:
     executor: java-11
     steps:
-      - checkout-git
+      - checkout
       - maven/with_cache:
           steps:
             - run: *clean-build
