Added maven setting file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
     steps:
       - checkout
       - maven/with_cache:
+          settings_file: ./circleci/settings.xml
           steps:
             - run: *clean-build
       - persist_to_workspace:
