--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
     steps:
       - checkout
       - maven/with_cache:
-          settings_file: ./circleci/settings.xml
+          settings_file: .circleci/settings.xml
           steps:
             - run: *clean-build
       - persist_to_workspace:
