--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
       - image: eu.gcr.io/entur-system-1287/circleci-toolbox-image-java11
         auth:
           username: _json_key
-          password: $DOCKER_PASSWORD
+          password: $GCLOUD_SERVICE_KEY
           environment:
         MAVEN_OPTS: -Xmx3G
     steps:
@@ -53,7 +53,7 @@ jobs:
       - image: eu.gcr.io/entur-system-1287/circleci-toolbox-image-java11
         auth:
           username: _json_key
-          password: $DOCKER_PASSWORD
+        password: $GCLOUD_SERVICE_KEY
     environment:
       DEBIAN_FRONTEND: "noninteractive"
     steps:
@@ -73,8 +73,8 @@ workflows:
   build_test_deploy:
     jobs:
       - build:
-         context: global
+        context: org-carbon
       - deploy-docker:
-          context: global
+        context: org-carbon
           requires:
             - build
