Updated helm charts [ckip ci]

--- a/helm/ukur-demo/templates/deployment.yaml
+++ b/helm/ukur-demo/templates/deployment.yaml
@@ -10,7 +10,7 @@ spec:
   revisionHistoryLimit: 2
   selector:
     matchLabels:
-      app: {{ .Release.Name }}
+      {{- include "common.labels" . | indent 8 }}
   strategy:
     type: Recreate
   template:
