--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>org.entur</groupId>
     <artifactId>ukur-demo</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <licenses>
         <license>
@@ -157,7 +157,7 @@
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>${docker.maven.plugin.version}</version>
                 <configuration>
-                    <autoPull>always</autoPull>
+                    <autoPull>off</autoPull>
                     <images>
                         <image>
                             <name>${docker.image}</name>
