--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,45 @@ aliases:
     echo 'export CIRCLE_SHA1="$CIRCLE_SHA1"' >> $BASH_ENV
     echo 'export BUILD_STATUS_API_KEY="$BUILD_STATUS_API_KEY"' >> $BASH_ENV
     /tools/build_notify.sh
+- &bump-versions
+  name: Bump version in pom file
+  command: |
+    mvn build-helper:parse-version versions:set -DnewVersion=\${parsedVersion.majorVersion}.\${parsedVersion.minorVersion}.\${parsedVersion.nextIncrementalVersion} versions:commit
+
+- &git-push-next-version-release
+  name: Push to repository
+  command: |
+    echo "Trying to tag release-$MAVEN_VERSION"
+    git config --global user.email "circleci@entur.org"
+    git config --global user.name "EnturCircleCi"
+    git tag -a release-$MAVEN_VERSION -m "Tagging current version"
+    git add helm/$CIRCLE_PROJECT_REPONAME/Chart.yaml
+    git add helm/$CIRCLE_PROJECT_REPONAME/values.yaml
+    git add pom.xml
+    git commit -m "Helm Update [ci skip]"
+    git push --tags --set-upstream origin $CIRCLE_BRANCH
+
+  ### Application version handling
+- &get-version-from-pom
+  name: Getting version by maven pom version
+  command: |
+    MVN_VERSION=$(mvn -q \
+        -Dexec.executable=echo \
+        -Dexec.args='${project.version}' \
+        --non-recursive \
+        exec:exec)
+    echo "export MVN_VERSION=$MVN_VERSION" >> $BASH_ENV
+
+- &set-versions-to-maven-version
+  name: Set version in helm dir to $MVN_VERSION
+  command: |
+    echo "Setting helm versions to $MVN_VERSION"
+    pushd helm/$CIRCLE_PROJECT_REPONAME
+    sed -i "s/version:.*$/version: '$MVN_VERSION'/g"  ./Chart.yaml
+    sed -i "s/appVersion:.*$/appVersion: 'release-$MVN_VERSION'/g"  ./Chart.yaml
+    sed -i "s/imageTag:.*$/imageTag: release-$MVN_VERSION/g"  ./values.yaml
+    popd
+
 jobs:
   build:
     docker:
@@ -77,6 +116,20 @@ jobs:
         name: Docker build and push
         command: mvn docker:build docker:push -s /tools/m2/settings.xml
     - run: *post-hook
+
+  prepare-next-release:
+      executor: java-11
+
+      steps:
+        - checkout
+        - attach_workspace:
+            at: .
+        - add_ssh_keys:
+            fingerprints:
+              - $SSH_FINGERPRINT
+        - run: *bump-versions
+        - run: *git-push-next-version-release
+
 workflows:
   version: 2
   build_test_deploy:
@@ -90,3 +143,6 @@ workflows:
         filters:
           branches:
             only: master
+    - prepare-next-release:
+        requires:
+          - deploy-docker
