--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <docker.maven.plugin.version>0.28.0</docker.maven.plugin.version>
         <docker.from>eu.gcr.io/carbon-1287/openjdk11-base-image</docker.from>
         <fabric8.dockerUser>carbon-1287/</fabric8.dockerUser>
-        <docker.image>eu.gcr.io/${fabric8.dockerUser}${project.artifactId}:${project.version}</docker.image>
+        <docker.image>eu.gcr.io/${fabric8.dockerUser}${project.artifactId}:release-${project.version}</docker.image>
         <docker.cleanup>none</docker.cleanup>
     </properties>
 
