Updated circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,5 +149,6 @@ workflows:
             branches:
               only: master
       - prepare-next-release:
+          context: org-carbon
           requires:
             - deploy-docker
