--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,6 +133,7 @@ jobs:
           fingerprints:
             - $SSH_FINGERPRINT
       - run: *bump-versions
+      - run: *set-versions-to-maven-version
       - run: *get-version-from-pom
       - run: *git-push-next-version-release
 
