--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,8 @@ aliases:
   - &get-version-from-pom
     name: Getting version by maven pom version
     command: |
-      MVN_VERSION=$(mvn -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec)
+      cd ~/project
+      MVN_VERSION=$(mvn -q -s /tools/m2/settings.xml -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec)
       echo "export MVN_VERSION=$MVN_VERSION" >> $BASH_ENV
 
   - &set-versions-to-maven-version
@@ -91,6 +92,7 @@ jobs:
             - target
             - pom.xml
             - .circleci
+            - helm/*/
   deploy-docker:
     docker:
       - image: eu.gcr.io/carbon-1287/circleci-toolbox-image-java11
