--- a/helm/ukur-demo/values.yaml
+++ b/helm/ukur-demo/values.yaml
@@ -1,7 +1,7 @@
 minReplicas: 1
 maxReplicas: 1
 image: eu.gcr.io/carbon-1287/ukur-demo
-imageTag: release-
+imageTag: release-1.0.3
 imagePullPolicy: Always
 slack: talk-ror
 team: ror
