static chart version - v1

--- a/helm/ukur-demo/templates/service.yaml
+++ b/helm/ukur-demo/templates/service.yaml
@@ -17,5 +17,6 @@ spec:
     targetPort: {{ .Values.service.debugPort }}
   selector:
     app: {{ .Release.Name }}
+    version: {{ .Chart.Version }}
   sessionAffinity: None
   type: ClusterIP
