--- a/helm/ukur-demo/Chart.yaml
+++ b/helm/ukur-demo/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 name: ukur-demo
-version: '1.0.8'
+version: 'v1'
 appVersion: 'release-1.0.8'
 description: ukur-demo is something
 keywords:
