--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,7 +161,7 @@ jobs:
       - run:
           name: Deployed helm chart
           command: cat ./helm/$CIRCLE_PROJECT_REPONAME/Chart.yaml
-      - run: *tag-successful-deployment
+      #- run: *tag-successful-deployment
 
 workflows:
   version: 2.1
